src/objects/ffbc__Contract__c.object
<CustomObject>
    <customHelpPage>ffbc__contracthelp</customHelpPage>
    <description>Contains contracts between your organization and a customer to provide them with a product or service.</description>
    <fields>
        <fullName>ffbc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce Account object.</description>
        <inlineHelpText>Lookup to the Salesforce Account object.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ActiveContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the active contract to which this change request relates.</description>
        <inlineHelpText>Lookup to the active contract to which this change request relates.</inlineHelpText>
        <label>Active Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>RelatedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__AnnualRecurringRevenue__c</fullName>
        <description>Monthly Recurring Revenue multiplied by 12.</description>
        <formula>ffbc__MonthlyRecurringRevenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Recurring Revenue multiplied by 12.</inlineHelpText>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__ApprovalStatus__c</fullName>
        <description>Contains the approval status of the change request if this is a contract change request.</description>
        <inlineHelpText>Contains the approval status of the change request if this is a contract change request.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractName__c</fullName>
        <description>Textual name of the contract.</description>
        <inlineHelpText>Textual name of the contract.</inlineHelpText>
        <label>Contract Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the contract.</description>
        <inlineHelpText>Description of the contract.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__EndContractNotes__c</fullName>
        <description>Additional information about the reasons for ending the contract.</description>
        <inlineHelpText>Additional information about the reasons for ending the contract.</inlineHelpText>
        <label>End Contract Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__EndDate__c</fullName>
        <description>Date on which the contract ends.</description>
        <inlineHelpText>Date on which the contract ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__FirstBillDate__c</fullName>
        <description>First date on which the contract is to be billed.</description>
        <inlineHelpText>First date on which the contract is to be billed.</inlineHelpText>
        <label>First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__IsRenewalOfPreviousContract__c</fullName>
        <description>Indicates whether this contract is a renewal of the previous contract.</description>
        <formula>AND(
                ISPICKVAL(ffbc__Type__c, &apos;Contract&apos;),
                NOT(ISNULL(ffbc__PreviousContract__c)),
                ffbc__PreviousContract__r.ffbc__MajorVersion__c &lt; ffbc__MajorVersion__c
            )</formula>
        <inlineHelpText>Indicates whether this contract is a renewal of the previous contract.</inlineHelpText>
        <label>Renewal of Previous Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__MajorVersion__c</fullName>
        <description>The major version of this contract.</description>
        <inlineHelpText>Contract major version</inlineHelpText>
        <label>Major Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__MonthlyRecurringRevenue__c</fullName>
        <description>Total monthly recurring revenue for all contract line items.</description>
        <inlineHelpText>Total monthly recurring revenue for all contract line items.</inlineHelpText>
        <label>Monthly Recurring Revenue</label>
        <summarizedField>ffbc__ContractLineItem__c.ffbc__MonthlyRecurringRevenue__c</summarizedField>
        <summaryForeignKey>ffbc__ContractLineItem__c.ffbc__Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffbc__OriginalEndDate__c</fullName>
        <description>The original date on which the contract was due to end.</description>
        <inlineHelpText>The original date on which the contract was due to end.</inlineHelpText>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__PreviousContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the previous contract to which this contract relates.</description>
        <inlineHelpText>Lookup to the previous contract to which this contract relates.</inlineHelpText>
        <label>Previous Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Next Contract</relationshipLabel>
        <relationshipName>NextContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ReasonForEndingContract__c</fullName>
        <description>Reason for ending the contract.</description>
        <inlineHelpText>Reason for ending the contract.</inlineHelpText>
        <label>Reason for Ending Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Did not renew</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__RenewalReminder__c</fullName>
        <description>Date on which to report that the contract is coming up for renewal.</description>
        <inlineHelpText>Date on which to report that the contract is coming up for renewal.</inlineHelpText>
        <label>Renewal Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the contract starts.</description>
        <inlineHelpText>Date on which the contract starts.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__Status__c</fullName>
        <description>Status of the contract. The status can be Draft, Active or Expired.</description>
        <inlineHelpText>Status of the contract. The status can be Draft, Active or Expired.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__TotalContractValue__c</fullName>
        <description>Total value of all recurring fixed and one-off contract lines over the entire life of the contract if the contract is not continuous.</description>
        <inlineHelpText>Total value of all recurring fixed and one-off contract lines over the entire life of the contract if the contract is not continuous.</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__TriggerId__c</fullName>
        <description>An identifier that is used by services when creating contracts.</description>
        <label>Trigger ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Type__c</fullName>
        <description>Type of contract. Determines whether this is a contract or a change request for a contract.</description>
        <inlineHelpText>Type of contract. Determines whether this is a contract or a change request for a contract.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Creating_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Legal_Contract_End_Date__c</fullName>
        <label>Legal Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Upfront_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Upfront_Payment_Paid__c</fullName>
        <formula>AND(ffps_brunt__Upfront_Payment_Value__c &gt; 0, ffps_brunt__Upfront_Amount_Paid__c &gt;= ffps_brunt__Upfront_Payment_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upfront Payment Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Upfront_Payment_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Upfront_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Upfront Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Type__c</columns>
        <columns>ffbc__Status__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ffbc__AllActiveContracts</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contracts - Active</label>
    </listViews>
    <listViews>
        <fullName>ffbc__AllDraftContracts</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contracts - Draft</label>
    </listViews>
    <listViews>
        <fullName>ffbc__AllExpiredContracts</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>Contracts - Expired</label>
    </listViews>
    <listViews>
        <fullName>ffbc__ChangeRequests</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__ApprovalStatus__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>Change Requests</label>
    </listViews>
    <listViews>
        <fullName>ffbc__Renewals</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__ApprovalStatus__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>ffbc__MajorVersion__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>Renewals</label>
    </listViews>
    <listViews>
        <fullName>ffbc__RenewalsDueNext30Days</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>ffbc__RenewalReminder__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>ffbc__RenewalReminder__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Contracts - Renewal due in next 30 days</label>
    </listViews>
    <listViews>
        <fullName>ffbc__RenewalsOverdue</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ContractName__c</columns>
        <columns>ffbc__Account__c</columns>
        <columns>ffbc__StartDate__c</columns>
        <columns>ffbc__EndDate__c</columns>
        <columns>ffbc__RenewalReminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ffbc__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ffbc__Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>ffbc__RenewalReminder__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Contracts - Renewal overdue</label>
    </listViews>
    <nameField>
        <displayFormat>CT{0000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>